<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SettingsRow">

    <ImageView
        style="@style/SettingsIcon"
        android:src="@drawable/ic_notifications"
        android:contentDescription="@string/content_desc_notifications"/>

    <LinearLayout
        style="@style/SettingsTextGroup">
        <TextView
            style="@style/SettingsTitle"
            android:text="@string/notifications"/>
        <TextView
            style="@style/SettingsSubtitle"
            android:text="@string/notifications_subtitle"
            />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
